Alterando type de telefone

--- a/Index.html
+++ b/Index.html
@@ -24,7 +24,7 @@
             <input type="text" id="nome" required>
 
             <label for="telefone">Telefone:</label>
-            <input type="text" id="telefone" required>
+            <input type="number" id="telefone" required>
 
             <button type="button" onclick="adicionarContato()">Cadastrar</button>
         </form>
